apps/v34l-blog/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: v34l-root
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - m15ty.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: v34l-blog-service
          port: 80
