apps/v34l-blog/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v34l-blog-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: blog.v34l.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: v34l-blog-service
                port:
                  number: 80
    - host: v34l.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: v34l-blog-service
                port:
                  number: 80
  tls:
    - hosts:
      - blog.v34l.com
      secretName: blog-secret
      - v34l.com
      secretName: blog-secret-2
